Fix z-index css issues

--- a/packages/web-app/src/Page.styles.scss
+++ b/packages/web-app/src/Page.styles.scss
@@ -65,3 +65,10 @@
     }
   }
 }
+
+.page-loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2em;
+}
