--- a/packages/web-app/src/components/category-link/styles.scss
+++ b/packages/web-app/src/components/category-link/styles.scss
@@ -3,7 +3,6 @@
   color: black;
   padding: 0.70em;
   border-radius: 12px;
-  z-index: -1;
   position: relative;
 
   .count {
