--- a/packages/web-app/src/components/header-panel/styles.scss
+++ b/packages/web-app/src/components/header-panel/styles.scss
@@ -16,6 +16,7 @@ $header-font: Helvetica, sans-serif;
 	position: sticky;
 	top: 0;
 	background-color: white;
+	z-index: 100;
 
 	.header {
 		font-family: $header-font;
